--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ h1 {
 h2 {
   font-size: 0.75em;
   margin: -5px 0 0;
-font-weight: normal;
+  font-weight: normal;
 }
 
 
@@ -165,7 +165,7 @@ body {
   color: #999;
 }
 
-/* Green header */
+/* Header */
 header {
   background: #b29c7d;
   border-color: #7f6854;
@@ -173,7 +173,7 @@ header {
 
 /* Nav background on mobile devices */
 nav {
-  background: #7f6854;
+  background: #b29c7d;
 }
 
 /* Logo text */
