Initial content for the about page

--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ footer {
   margin: 0 0 10px;
 }
 
-.contact-info li.mail a {
+.contact-info li.email a {
   background-image: url('../img/mail.png');
 }
 
