--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ footer {
   text-align: center;
   clear: both;
   padding-top: 50px;
-  color: #ccc;
+  color: #999;
 }
 
 
@@ -103,15 +103,16 @@ footer {
   float: left;
   width: 45%;
   margin: 2.5%;
-  background-color: #f5f5f5;
-  color: #bdc3c7;
+  background-color: #fffbed;
+  color: #b29c7d;
+  border-bottom: solid 1px #dbcdad;
 }
 
 #gallery li a p {
   margin: 0;
   padding: 5%;
   font-size: 0.75em;
-  color: #bdc3c7;
+  color: #b29c7d;
 }
 
 
@@ -155,7 +156,7 @@ footer {
 
 /* Site body */
 body {
-  background-color: #a4b7bb;
+  background-color: #d1e6f0;
   color: #999;
 }
 
