--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,11 @@ footer {
   color: #999;
 }
 
+footer p {
+  padding-top: 10px;
+  border-top: solid 1px #999;
+}
+
 
 
 /*--PAGE: PORTFOLIO---------------------*/
@@ -124,6 +129,10 @@ footer {
   max-width: 150px;
   margin: 0 auto 30px;
   border-radius: 100px;
+}
+
+#exhibitions li {
+  list-style-type: square;
 }
 
 
@@ -168,7 +177,7 @@ header {
 
 /* Nav background on mobile devices */
 nav {
-  background: #b29c7d;
+  background: #a4b7bb;
 }
 
 /* Logo text */
