--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 480px) {
+@media only screen and (min-width: 480px) {
 
   /*--TWO COLUMN LAYOUT---------------------*/
 
@@ -37,7 +37,7 @@
 
 
 
-@media screen and (min-width: 660px) {
+@media only screen and (min-width: 660px) {
 
   /*--HEADER---------------------*/
 
