--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 480px) {
 
-  /*--TWO COLUMN LAYOUT---------------------*/
+  /*--TWO COLUMN LAYOUT FOR CONTACT----------*/
 
   #primary {
     width: 50%;
@@ -69,6 +69,20 @@
   header {
     border-bottom: 5px solid #7f6854;
     margin-bottom: 60px;
+  }
+
+
+
+  /*--TWO COLUMN LAYOUT FOR PORTFOLIO IMAGE PAGES------*/
+
+  #photo {
+    width: 50%;
+    float: left;
+  }
+
+  #content {
+    width: 40%;
+    float: right;
   }
 
 }
