--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,15 @@
+/* Display the gallery correctly on small screens when the description text wraps down an extra line */
+@media only screen and (max-width: 479px) {
+
+  /*--PAGE: PORTFOLIO---------------------*/
+
+  #gallery li:nth-child(5n) {
+    clear: left;
+  }
+}
+
+
+
 @media only screen and (min-width: 480px) {
 
   /*--TWO COLUMN LAYOUT FOR CONTACT----------*/
@@ -20,9 +32,7 @@
     width: 28.3333%;
   }
 
-  #gallery li:nth-child(3n)
-  #gallery li:nth-child(4n)
-  #gallery li:nth-child(5n) {
+  #gallery li:nth-child(4n) {
     clear: left;
   }
 
