--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ h3 {
   margin: 0 0 1em 0;
 }
 
+p {
+  line-height: 1.5;
+}
+
 
 
 /*--HEADING---------------------*/
@@ -58,6 +62,7 @@ h1 {
 h2 {
   font-size: 0.75em;
   margin: -5px 0 0;
+  text-transform: uppercase;
 }
 
 
