--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,7 @@ footer p {
   background-color: #fffbed;
   color: #b29c7d;
   border-bottom: solid 1px #b29c7d;
+  box-shadow: 3px 3px 15px #999;
 }
 
 #gallery li a p {
@@ -153,6 +154,7 @@ footer p {
   max-width: 150px;
   margin: 0 auto 30px;
   border-radius: 100px;
+  box-shadow: 3px 3px 15px #999;
 }
 
 #exhibitions li {
