--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,30 @@ footer p {
 
 
 
+/*--PORTFOLIO LIGHTBOX--------------*/
+
+#overlay {
+  background: rgba(0,0,0,.8);
+  width: 100%;
+  height: 140%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  text-align: center;
+}
+
+#overlay img {
+  margin-top: 10%;
+  width: 50%;
+}
+
+#overlay p {
+  color: white;
+}
+
+
+
 /*--PAGE: ABOUT---------------------*/
 
 .profile-photo {
