--- a/css/main.css
+++ b/css/main.css
@@ -150,10 +150,10 @@ footer p {
 /*--PORTFOLIO LIGHTBOX--------------*/
 
 #overlay {
-  background: rgba(0,0,0,.8);
+  background: rgba(0,0,0,.9);
   width: 100%;
-  height: 140%;
-  position: absolute;
+  height: 100%;
+  position: fixed;
   top: 0;
   left: 0;
   display: none;
@@ -161,8 +161,8 @@ footer p {
 }
 
 #overlay img {
-  margin-top: 10%;
-  width: 50%;
+  margin-top: 5%;
+  width: 60%;
 }
 
 #overlay p {
