--- a/wildlife/css/style.css
+++ b/wildlife/css/style.css
@@ -52,7 +52,8 @@ h3 {
 img {
   max-width: 100%;
   margin-bottom: 20px;
-  border-radius: 10px;
+  border-radius: 10px 0px;
+  border-top: 4px solid #4e8077;
   border-bottom: 4px solid #4e8077;
 }
 
