--- a/wildlife/css/style.css
+++ b/wildlife/css/style.css
@@ -1,13 +1,3 @@
-/* Web Fonts -------------------- */
-
-@font-face {
-  font-family: 'Abolition Regular';
-  src: url('../fonts/abolition-regular-webfont.eot');
-  src: url('../fonts/abolition-regular-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/abolition-regular-webfont.woff') format('woff'),
-       url('../fonts/abolition-regular-webfont.ttf') format('truetype');
-}
-
 /* Base Styles -------------------- */
 
 * {
@@ -23,14 +13,13 @@ body {
 
 h1,
 h2 {
-  font-family: 'Abolition Regular', Helvetica, Arial, sans-serif;
+  font-family: 'Architects Daughter', Helvetica, Arial, sans-serif;
   font-weight: normal;
 }
 
 h1 {
   font-size: 5.625rem;
   color: rgba(255, 255, 255, 1);
-  text-transform: uppercase;
   line-height: 1.3;
   text-shadow: 0 1px 1px rgba(0,0,0,.8);
   margin: 12px 0 0;
@@ -261,7 +250,7 @@ nav a.selected, nav a:hover {
     border: none;
   }
   h1 {
-    font-size: 5rem;
+    font-size: 4rem;
     line-height: 1.1;
   }
   .arrow {
@@ -276,7 +265,7 @@ nav a.selected, nav a:hover {
     width: 100%;
   }
   .main-footer {
-    padding: 20px 0;
+    padding: 20px 10px;
   }
 }
 
