--- a/wildlife/css/style.css
+++ b/wildlife/css/style.css
@@ -12,7 +12,8 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-family: 'Architects Daughter', Helvetica, Arial, sans-serif;
   font-weight: normal;
 }
@@ -29,13 +30,14 @@ h2 {
   font-size: 3.3125em;
   line-height: 1.1;
   margin: 0 0 .5em;
+
 }
 
 h3 {
-  font-size: 1.25em;
-  color: #48525c;
-  line-height: 1.2;
-  margin-bottom: 1.7em;
+  font-size: 3em;
+  color: #4e8077;
+  line-height: 1.1;
+  margin: .5em 0;
 }
 
 img {
