Consolidated css for h2 and h3 headings. Updated descriptions for sea birds

--- a/wildlife/css/style.css
+++ b/wildlife/css/style.css
@@ -26,9 +26,13 @@ h1 {
   margin: 12px 0 0;
 }
 
+h2,
+h3 {
+  line-height: 1.1;
+}
+
 h2 {
   font-size: 3.3125em;
-  line-height: 1.1;
   margin: 0 0 .5em;
 
 }
@@ -36,7 +40,6 @@ h2 {
 h3 {
   font-size: 3em;
   color: #4e8077;
-  line-height: 1.1;
   margin: .5em 0;
 }
 
