--- a/wildlife/css/style.css
+++ b/wildlife/css/style.css
@@ -13,7 +13,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+.intro {
   font-family: 'Architects Daughter', Helvetica, Arial, sans-serif;
   font-weight: normal;
 }
@@ -169,19 +170,6 @@ nav a.selected, nav a:hover {
   padding-right: 50px;
   margin: auto;
   max-width: 960px;
-}
-
-.wildlife {
-  color: white;
-  text-align: left;
-  padding: 30% 24% 6% 10%;
-  border-top: 10px solid #4e8077;
-  border-bottom: 10px solid #4e8077;
-  margin: 105px 0 60px;
-  background: #434a52 url('../img/redpanda.jpg') no-repeat center;
-  background-size: cover;
-  box-shadow: inset 0 0 50px 10px rgba(0,0,0, .8);
-  border-radius: 10px;
 }
 
 /* Floated Columns ------------------ */
