--- a/css/app.css
+++ b/css/app.css
@@ -81,21 +81,45 @@ p {
 
 /*----------Portfolio Styles---------------------*/
 
-.site {
+.image {
   margin-bottom: 40px;
   padding-bottom: 40px;
   border-bottom: 1px dashed #a69e9d;
 }
 
-.site img {
+.image img {
   width: 45%;
   float: left;
   border: 1px solid black;
 }
 
-.site-description {
+.image-description {
   width: 48%;
   float: right;
+}
+
+
+/*----------Portfolio Lightbox----------*/
+
+#overlay {
+  background: rgba(0,0,0,.9);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  text-align: center;
+}
+
+#overlay img {
+  margin-top: 2%;
+  max-height: 70%;
+  max-width: 70%;
+}
+
+#overlay p {
+  color: white;
 }
 
 
